--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,11 @@ dependencies:
   provider: ^6.0.5
   http: ^0.13.6
   ant_design_flutter: ^0.0.1+5
+  flutter_svg: ^2.0.5
+  firebase_auth: ^4.7.1
+  firebase_core: ^2.15.0
+  firebase_storage: ^11.2.5
+  cloud_firestore: ^4.8.3
 
 dev_dependencies:
   flutter_test:
@@ -64,6 +69,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/
+    - assets/img/
+    - assets/img/moeLogo.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
