--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   flutter_document_picker: ^5.2.3
   uuid: ^3.0.7
   mime: ^1.0.4
+  pdf: ^3.10.4
 
 dev_dependencies:
   flutter_test:
