--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   mime: ^1.0.4
   pdf: ^3.10.4
   flutter_pdfview: ^1.3.1
+  image_picker: ^1.0.1
 
 dev_dependencies:
   flutter_test:
@@ -76,6 +77,7 @@ flutter:
     - assets/Images/waiting.jpg
     - assets/Images/material.jpg
     - assets/Images/book.jpg
+    - assets/Images/default.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
