--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,7 @@ dependencies:
   provider: ^6.0.5
   http: ^0.13.6
   ant_design_flutter: ^0.0.1+5
-  flutter_svg: ^2.0.5
+  flutter_svg: ^2.0.7
   firebase_auth: ^4.7.1
   firebase_core: ^2.15.0
   firebase_storage: ^11.2.5
@@ -77,7 +77,8 @@ flutter:
     - assets/Images/waiting.jpg
     - assets/Images/material.jpg
     - assets/Images/book.jpg
-    - assets/Images/default.jpg
+    - assets/Images/default.jpg 
+    - assets/Images/defaultPP.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
