--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   flutter_pdfview: ^1.3.1
   image_picker: ^1.0.1
   syncfusion_flutter_pdfviewer: ^21.2.10
+  pdf: ^3.10.4
 
 dev_dependencies:
   flutter_test:
