--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,13 +46,14 @@ dependencies:
   flutter_document_picker: ^5.2.3
   uuid: ^3.0.7
   mime: ^1.0.4
-  flutter_pdfview: ^1.3.1
-  image_picker: ^1.0.1
-  syncfusion_flutter_pdfviewer: ^21.2.10
-  pdf: ^3.10.4
+  #flutter_pdfview: ^1.3.1
+  image_picker: ">=0.8.5 <2.0.0"
+  #syncfusion_flutter_pdfviewer: ^21.2.10
+  #pdf: ^3.10.4
   flutter_speed_dial: ^7.0.0
   youtube_player_flutter: ^8.1.2
-  flutter_quill: ^6.4.4
+  flutter_quill: ^7.2.19
+  quill_delta: ^3.0.0-nullsafety.2
 
 dev_dependencies:
   flutter_test:
